fix 'add button' issue on mobile

--- a/client/parties/styles/parties.import.less
+++ b/client/parties/styles/parties.import.less
@@ -2,6 +2,7 @@
   button.btn{
     background: @color3;
     float:right;
+    margin-right:5px;
     outline : none;
     i{
       color : @color5;
